<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/activity_main"
        android:background="@drawable/splash_background"
        tools:context=".ui.components.activities.splash.SplashActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/logo"
            android:scaleType="fitXY"
            />
            <View
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/colorWhite"
                android:layout_marginTop="@dimen/_30sdp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_phone"
                android:fontFamily="@font/gotham_bold"
                android:textSize="@dimen/txtSizeLarge"
                android:foreground="@drawable/ripple_rec"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_20sdp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_facebook"
                android:fontFamily="@font/gotham_book"
                android:textSize="@dimen/txtSizeLarge"
                android:foreground="@drawable/ripple_rec"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_20sdp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:fontFamily="@font/gotham_book"
                android:textSize="@dimen/txtSizeLarge"
                android:foreground="@drawable/ripple_rec"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_20sdp"
                />

        </LinearLayout>

    </RelativeLayout>
</layout>